--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,10 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+
+# hh
+Package.resolved
+xcuserdata
+.docker.build
+.swiftpm
+
