--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,12 @@ matrix:
           dist: xenial
           env:  SWIFT_SNAPSHOT_NAME="https://swift.org/builds/swift-5.2.4-release/ubuntu1604/swift-5.2.4-RELEASE/swift-5.2.4-RELEASE-ubuntu16.04.tar.gz"
           sudo: required
+        - os:   Linux
+          dist: xenial
+          env:  SWIFT_SNAPSHOT_NAME="https://swift.org/builds/swift-5.3.1-release/ubuntu1604/swift-5.3.1-RELEASE/swift-5.3.1-RELEASE-ubuntu16.04.tar.gz"
+          sudo: required
         - os:   osx
-          osx_image: xcode11
+          osx_image: xcode12
         - os:   osx
           osx_image: xcode11.4
 
