--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -2,22 +2,44 @@ name: Build and Test
 
 on:
   push:
-    branches:
-      - develop
-      - main
   pull_request:
-    branches: [ develop ]
   schedule:
-  - cron: "30 9 * * 1"
+    - cron: "30 9 * * 1"
 
 jobs:
-  build:
-
-    runs-on: macos-latest
-
+  linux:
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        image:
+          - swift:5.0.3-xenial
+          - swift:5.1.5-xenial
+          - swift:5.2.5-xenial
+          - swift:5.3.2-xenial
+          - swift:5.3.2-bionic
+    container: ${{ matrix.image }}
     steps:
-    - uses: actions/checkout@v2
-    - name: Build
-      run: swift build -c release
-    - name: Run tests
-      run: swift test
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+      - name: Build Swift Debug Package
+        run: swift build -c debug
+      - name: Build Swift Release Package
+        run: swift build -c release
+      - name: Run Tests
+        run: swift test
+  nextstep:
+    runs-on: macos-latest
+    steps:
+      - name: Select latest available Xcode
+        uses: maxim-lobanov/setup-xcode@v1.2.1
+        with:
+          xcode-version: 12.2
+      - name: Checkout Repository
+        uses: actions/checkout@v2
+      - name: Build Swift Debug Package
+        run: swift build -c debug
+      - name: Build Swift Release Package
+        run: swift build -c release
+      - name: Run Tests
+        run: swift test
