--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -16,6 +16,7 @@ jobs:
           - swift:5.5.3-xenial
           - swift:5.6.1-bionic
           - swift:5.7.2-focal
+          - swift:5.8-jammy
     container: ${{ matrix.image }}
     steps:
       - name: Checkout Repository
