--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -15,8 +15,7 @@ jobs:
         image:
           - swift:5.5.3-xenial
           - swift:5.6.1-bionic
-          - swift:5.7.2-focal
-          - swift:5.8-jammy
+          - swift:5.10.1-noble
     container: ${{ matrix.image }}
     steps:
       - name: Checkout Repository
@@ -33,7 +32,7 @@ jobs:
       - name: Select latest available Xcode
         uses: maxim-lobanov/setup-xcode@v1.5.1
         with:
-          xcode-version: 13.2.1
+          xcode-version: latest
       - name: Checkout Repository
         uses: actions/checkout@v3
       - name: Build Swift Debug Package
